--- a/Parlagfű/parlagfu.html
+++ b/Parlagfű/parlagfu.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>A parlagfűről</title>
+    <link rel="stylesheet" href="parlagfu.css">
 </head>
 <body>
+    <table id="foTabla">
+        <tr>
+            <td>
+                <table id="belsoTabla">
+                    <tr>
+                        <td colspan="6"><img src="potcim.png" alt="Kép a parlagfűről" title="Kép a parlagfűről"></td>
+                    </tr>
+                    <tr id="masodik">
+                        <td>Előfordulása</td>
+                        <td>Fejlődése</td>
+                        <td>Terjedése</td>
+                        <td>Parlagfű allergia</td>
+                        <td>Megelőzés</td>
+                        <td>Irtási módszerek</td>
+                    </tr>
+                    <tr>
+                        <td colspan="6"></td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
     
 </body>
 </html>
