--- a/Tizedes/index.html
+++ b/Tizedes/index.html
@@ -25,7 +25,7 @@ a:hover {
 <table width="1000" cellspacing="0" cellpadding="15" align="left" border=0>
 	<tr>
 		<td width="120">&nbsp;</td>
-		<td bgcolor="#FFFFFF"><h2>&quot;53 magyar film&quot;</h2>
+		<td bgcolor="#FFFFFF"><h2 align="center">&quot;53 magyar film&quot;</h2>
 			<p>
 				Az "53 magyar film" filmválogatás, melyet a Magyar Művészeti 
 				Akadémia tagjai állítottak össze az általuk legértékesebb alkotásnak tartott magyar 
@@ -40,7 +40,7 @@ a:hover {
 				beérkezett adatokat összesítették, s mivel az utolsó helyen holtverseny alakult ki, végül is 
 				egy 53-as listát hoztak nyilvánosságra.
 			</p>
-			<table cellspacing="0" cellpadding="5" border="0">
+			<table width="100%" cellspacing="0" cellpadding="5" border="1pt">
 				<tr>
 					<th>Cím</th>
 					<th>Rendező</th>
